--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.1",
         "@reduxjs/toolkit": "^2.8.2",
-        "next": "15.4.2",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
+        "next": "15.5.2",
+        "react": "19.1.1",
+        "react-dom": "19.1.1",
+        "react-hook-form": "^7.62.0",
         "react-icons": "^5.5.0",
-        "react-redux": "^9.2.0"
+        "react-redux": "^9.2.0",
+        "zod": "^4.1.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
-        "@eslint/js": "^9.31.0",
+        "@eslint/js": "^9.34.0",
         "@tailwindcss/postcss": "^4",
-        "@types/node": "^20",
+        "@types/node": "^24",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "@typescript-eslint/eslint-plugin": "^8.38.0",
-        "@typescript-eslint/parser": "^8.38.0",
-        "eslint": "^9.31.0",
-        "eslint-config-next": "15.4.2",
+        "@typescript-eslint/eslint-plugin": "^8.41.0",
+        "@typescript-eslint/parser": "^8.41.0",
+        "eslint": "^9.34.0",
+        "eslint-config-next": "15.5.2",
         "eslint-config-prettier": "^10.1.8",
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-import-resolver-typescript": "^4.4.4",
         "eslint-plugin-import": "^2.32.0",
-        "eslint-plugin-prettier": "^5.5.3",
+        "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-react": "^7.37.5",
         "prettier": "^3.6.2",
         "tailwindcss": "^4",
